<resources>
    <string name="app_name">CinemaApp</string>
    <string name="internet_error">Отсутствует интернет-соединение</string>
    <string name="server_error">Произошла ошибка, попробуйте чуть позже</string>
    <string name="description">Описание</string>
    <string name="genres">Жанр</string>
    <string name="country">Страна</string>
    <string name="main_role">В главных ролях</string>
    <string name="director">Режиссер</string>
    <string name="age_restriction">Возрастные ограничения</string>
    <string name="watch">Посмотреть сеансы</string>
    <string name="no_stars">Информация отсутствует</string>
    <string name="price">Цена</string>
    <string name="address">Адресс</string>
    <string name="phone">Телефон</string>
    <string name="subway">Метро</string>
    <string name="session">Ближайший сеанс</string>
    <string name="no_info">нет информации</string>
    <string name="save">Сохранить</string>
    <string name="success">Фотография успешно сохранена</string>
    <string name="fail">Произошла ошибка</string>
    <string name="map">Показать на карте</string>
    <string name="call">Позвонить</string>
    <string name="no_maps">К сожалению, карты на вашем устройстве отсутствуют</string>
    <string name="geo">geo:0.0?q=%s</string>
    <string name="tel">tel:%s</string>
    <string name="no_info_about_cinemas">Информация по этому кино отсутстувет</string>
</resources>