<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@drawable/background_cinemas"
    tools:context=".ui.activities.MovieInfoActivity"
    android:orientation="vertical">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="300dp">

            <androidx.viewpager.widget.ViewPager
                android:id="@+id/viewPager"
                android:layout_width="match_parent"
                android:layout_height="match_parent"/>

            <com.google.android.material.tabs.TabLayout
                android:id="@+id/tab"
                app:tabBackground="@drawable/tab_selector"
                android:background="#00FFFFFF"
                app:tabIndicatorGravity="center"
                app:tabGravity="center"
                app:tabIndicatorHeight="0dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="bottom"/>

        </FrameLayout>

        <TextView
            android:id="@+id/title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="15dp"
            android:textColor="@color/black"
            android:textSize="24sp"
            android:textStyle="bold"
            android:fontFamily="@font/kornilow"/>

        <TextView
            android:text="@string/session"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="15dp"
            android:textColor="@color/black"
            android:textSize="24sp"
            android:textStyle="bold"
            android:fontFamily="@font/kornilow"/>

        <TextView
            android:id="@+id/session"
            android:layout_marginStart="15dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/kornilow"
            android:textColor="@color/black"
            android:textSize="24sp"/>

        <TextView
            android:text="@string/price"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="15dp"
            android:textColor="@color/black"
            android:textSize="24sp"
            android:textStyle="bold"
            android:fontFamily="@font/kornilow"/>

        <TextView
            android:id="@+id/price"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="15dp"
            android:fontFamily="@font/kornilow"
            android:textColor="@color/black"
            android:textSize="22sp" />

        <TextView
            android:text="@string/address"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="15dp"
            android:textColor="@color/black"
            android:textSize="24sp"
            android:textStyle="bold"
            android:fontFamily="@font/kornilow"/>


        <TextView
            android:id="@+id/address"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="15dp"
            android:fontFamily="@font/kornilow"
            android:textColor="@color/black"
            android:textSize="24sp" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/mapButton"
            android:text="@string/map"
            android:textAllCaps="false"
            android:backgroundTint="@color/dark_brown"
            app:cornerRadius="15dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="15dp"
            android:textColor="@color/black"
            android:textSize="24sp"
            android:textStyle="bold"
            android:fontFamily="@font/kornilow"/>

        <TextView
            android:text="@string/phone"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="15dp"
            android:textColor="@color/black"
            android:textSize="24sp"
            android:textStyle="bold"
            android:fontFamily="@font/kornilow"/>

        <TextView
            android:id="@+id/phone"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="15dp"
            android:fontFamily="@font/kornilow"
            android:textColor="@color/black"
            android:textSize="24sp" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/callButton"
            android:text="@string/call"
            android:textAllCaps="false"
            app:cornerRadius="15dp"
            android:backgroundTint="@color/dark_brown"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="15dp"
            android:textColor="@color/black"
            android:textSize="24sp"
            android:textStyle="bold"
            android:fontFamily="@font/kornilow"/>

        <TextView
            android:text="@string/subway"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="15dp"
            android:textColor="@color/black"
            android:textSize="24sp"
            android:textStyle="bold"
            android:fontFamily="@font/kornilow"/>

        <TextView
            android:id="@+id/subway"
            android:layout_width="match_parent"
            android:layout_height="70dp"
            android:layout_marginStart="15dp"
            android:fontFamily="@font/kornilow"
            android:textColor="@color/black"
            android:textSize="24sp" />

    </LinearLayout>

</ScrollView>