<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/background_movies"
    tools:context=".ui.activities.MovieInfoActivity"
    android:orientation="vertical">

    <TableLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <androidx.viewpager2.widget.ViewPager2
            android:id="@+id/movieViewPager"
            android:layout_width="match_parent"
            android:layout_height="300dp"/>

        <TextView
            android:id="@+id/title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="20dp"
            android:textColor="@color/black"
            android:textSize="24sp"
            android:textStyle="bold"
            android:fontFamily="@font/kornilow"/>

        <TextView
            android:layout_margin="5dp"
            android:text="@string/description"
            android:textStyle="bold"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/kornilow"
            android:textColor="@color/black"
            android:textSize="20sp"/>

        <TextView
            android:id="@+id/description"
            android:layout_margin="10dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/kornilow"
            android:textColor="@color/black"
            android:textSize="20sp"/>

        <TableRow>
            <TextView
                android:layout_margin="5dp"
                android:text="@string/age_restriction"
                android:textStyle="bold"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/kornilow"
                android:textColor="@color/black"
                android:textSize="20sp"/>

            <TextView
                android:id="@+id/age"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:fontFamily="@font/kornilow"
                android:textColor="@color/black"
                android:textSize="18sp" />
        </TableRow>

        <TableRow>

            <TextView
                android:layout_width="10dp"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:fontFamily="@font/kornilow"
                android:text="@string/genres"
                android:textColor="@color/black"
                android:textSize="20sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/genres"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:fontFamily="@font/kornilow"
                android:textColor="@color/black"
                android:textSize="18sp" />
        </TableRow>

        <TableRow>
            <TextView
                android:layout_margin="5dp"
                android:text="@string/country"
                android:textStyle="bold"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/kornilow"
                android:textColor="@color/black"
                android:textSize="20sp"/>

            <TextView
                android:id="@+id/country"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:fontFamily="@font/kornilow"
                android:textColor="@color/black"
                android:textSize="18sp" />
        </TableRow>

        <TableRow>
            <TextView
                android:layout_margin="5dp"
                android:text="@string/main_role"
                android:textStyle="bold"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/kornilow"
                android:textColor="@color/black"
                android:textSize="20sp"/>

            <TextView
                android:id="@+id/stars"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:fontFamily="@font/kornilow"
                android:textColor="@color/black"
                android:textSize="18sp" />
        </TableRow>

        <TableRow>
            <TextView
                android:layout_margin="5dp"
                android:text="@string/director"
                android:textStyle="bold"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/kornilow"
                android:textColor="@color/black"
                android:textSize="20sp"/>

            <TextView
                android:id="@+id/director"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:fontFamily="@font/kornilow"
                android:textColor="@color/black"
                android:textSize="18sp" />
        </TableRow>

        <TableRow>
            <TextView
                android:layout_margin="5dp"
                android:text="@string/writer"
                android:textStyle="bold"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/kornilow"
                android:textColor="@color/black"
                android:textSize="20sp"/>

            <TextView
                android:id="@+id/writer"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:fontFamily="@font/kornilow"
                android:textColor="@color/black"
                android:textSize="18sp" />
        </TableRow>

    </TableLayout>

</ScrollView>